--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4"
   }
 }
